<resources>
    <string name="app_name">SmartCityUniversalMarket</string>
    <string name="program_name">Гипермаркет на диване</string>
    <string name="image_main">Image of program</string>
    <string name="am_button1_string">К покупкам</string>
    <string name="am_button2_string">В корзину</string>
    <string name="am_button3_string">Мой аккаунт</string>
    <string name="am_button4_string">Настройки приложения</string>
    <string name="am_button5_string">Сменить пользователя</string>
    <string name="am_button6_string">Сохранить и Выйти</string>
    <string name="sign_in_string">Sign In | Вход</string>
    <string name="la_login_string">Login:</string>
    <string name="la_password_string">Password:</string>
    <string name="la_apply_button_string">Вход</string>
    <string name="la_reg_button_string">Registration</string>
    <string name="la_register_button_string">Еще не зарегистрированы?</string>
    <string name="la_password_edit_text_string">password</string>
    <string name="la_id_edit_text_string">Id</string>
    <string name="la_forgot_password_string">Забыли пароль?</string>
    <string name="fl_welcome_string">Добро Пожаловать</string>
    <string name="fl_long_text_string">Будущее наступило. Время быстрых и удобных покупок различного плана прямо с дивана пришло. Удобно, быстро, интересно. Среднестатистический покупатель на поход в супермаркет тратит 30 минут. Экономьте ваше время и деньги. Создавайте избранные списки покупок. Наблюдайте за вашими прошлыми покупками. Делитесь списком покупок с членами семьи. Продукт Universal Market поможет вам в этом.</string>
    <string name="fl_team_name_string">SmartCityBelarus</string>
    <string name="fl_registration_string">Регистрация</string>
    <string name="ra_email_string">Email</string>
    <string name="ra_email_edit_text_string">Your mail address</string>
    <string name="ra_mobile_number_string">Mobile number</string>
    <string name="ra_number_edit_text_string">Number</string>
    <string name="ra_password_string">Password</string>
    <string name="ra_password_edit_text_string">Password</string>
    <string name="ra_create_account_string">Создать аккаунт</string>
    <string name="ra_to_login_button_string">Уже есть аккаунт? Вход</string>
    <string-array name="size">
        <item>Lower-Standart</item>
        <item>Standart</item>
        <item>Higher-Standart</item>
    </string-array>
    <string-array name="font">
        <item>Bold</item>
        <item>Normal</item>
        <item>Italic</item>
    </string-array>
    <string-array name="types">
        <item>Продукты питания</item>
        <item>Гигиена и чистота</item>
        <item>Электроника</item>
        <item>Книжная продукция</item>
        <item>Прочее</item>
    </string-array>
    <string-array name="products">
        <item>Мясная продукция</item>
        <item>Хлебобулочные изделия</item>
        <item>Консервированные продукты</item>
        <item>Напитки</item>
    </string-array>
    <string-array name="cleaners">
        <item>Мыло</item>
        <item>Порошки</item>
        <item>Чистящие средства</item>
    </string-array>
    <string-array name="electronics">
        <item>Телевизоры</item>
        <item>Компьютеры и ноутбуки</item>
        <item>Телефоны</item>
        <item>Аксессуары</item>
    </string-array>
    <string-array name="papers">
        <item>Книги</item>
        <item>Журналы</item>
        <item>Газеты</item>
    </string-array>
    <string-array name="other">
        <item>Канцелярия</item>
        <item>Посуда</item>
        <item>Мебель</item>
    </string-array>
</resources>
