<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    tools:context="com.l.smartcityuniversalmarket.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_of_program_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/program_name"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageview_main"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/name_of_program_main"
                android:contentDescription="@string/image_main"
                android:src="@drawable/regnum_picture_1470041961499558_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageview_main"
                android:orientation="vertical">


                <Button
                    style="@style/mainActivityButtonStyle"
                    android:id="@+id/am_button1"
                    android:text="@string/am_button1_string" />

                <Button
                    style="@style/mainActivityButtonStyle"
                    android:id="@+id/am_button2"
                    android:text="@string/am_button2_string" />

                <Button
                    style="@style/mainActivityButtonStyle"
                    android:id="@+id/am_button3"
                    android:text="@string/am_button3_string" />

                <Button
                    style="@style/mainActivityButtonStyle"
                    android:id="@+id/am_button4"
                    android:text="@string/am_button4_string" />

                <Button
                    style="@style/mainActivityButtonStyle"
                    android:id="@+id/am_button5"
                    android:text="@string/am_button5_string" />
            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</FrameLayout>
