<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorWhiteOrOrangeAllActivities"
    android:orientation="vertical"
    tools:context="com.l.smartcityuniversalmarket.LoginActivity">

    <TextView
        android:id="@+id/name_of_program_login"
        style="@style/programNameTextView" />

    <ImageView
        android:id="@+id/imageview_login"
        style="@style/imageViewAppIconAllActivities"
        android:layout_below="@id/name_of_program_login"
        android:contentDescription="@string/image_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_login"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="30dp"
        android:paddingStart="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_in_string"
            android:textColor="@color/textViewLoginPasswordApplyColorLoginActivity"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textViewLoginActivityStandart"
                    android:text="@string/la_login_string" />

                <EditText
                    android:id="@+id/edit_text_login"
                    style="@style/editTextLoginActivityStandart"
                    android:layout_marginStart="42dp"
                    android:inputType="number"
                    android:text="@string/la_id_edit_text_string" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textViewLoginActivityStandart"
                    android:text="@string/la_password_string" />

                <EditText
                    android:id="@+id/edit_text_password"
                    style="@style/editTextLoginActivityStandart"
                    android:inputType="numberPassword"
                    android:text="@string/la_password_edit_text_string" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/la_apply_button"
                    style="@style/buttonLoginActivityStandart"
                    android:text="@string/la_apply_button_string" />

                <Button
                    android:id="@+id/la_forgot_pass_button"
                    style="@style/buttonLoginActivityStandart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColorWhiteOrOrangeAllActivities"
                    android:nextFocusDown="@id/la_apply_button"
                    android:text="@string/la_forgot_password_string"
                    android:textAllCaps="false"
                    android:textColor="@color/frontViewColor"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/la_register_button"
                    style="@style/buttonLoginActivityStandart"
                    android:background="@color/backgroundColorWhiteOrOrangeAllActivities"
                    android:nextFocusDown="@id/la_forgot_pass_button"
                    android:text="@string/la_register_button_string"
                    android:textAllCaps="false"
                    android:textColor="@color/frontViewColor"
                    android:textSize="19sp" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
